[gd_scene load_steps=4 format=3 uid="uid://t7vb1hjnj48n"]

[ext_resource type="Script" path="res://scripts/player/InventorySlot.gd" id="1_0dpsp"]
[ext_resource type="Texture2D" uid="uid://ug1db7ed5crq" path="res://component scene/items/Resources/Coins/coins_icon.jpg" id="1_hiccc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g02pa"]

[node name="Slot" type="Control" node_paths=PackedStringArray("item_details", "item_usage", "item_name", "item_type", "item_quantity", "item_sprite")]
layout_mode = 3
anchors_preset = 0
offset_left = 339.0
offset_top = 563.0
offset_right = 535.0
offset_bottom = 763.0
script = ExtResource("1_0dpsp")
item_details = NodePath("ItemDetails")
item_usage = NodePath("ItemUsage")
item_name = NodePath("ItemDetails/Name")
item_type = NodePath("ItemDetails/Type")
item_quantity = NodePath("Slot_background/background/ItemQuantity")
item_sprite = NodePath("Slot_background/background/ItemSprite")

[node name="Slot_background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="background" type="ColorRect" parent="Slot_background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.259294, 0.259294, 0.259294, 1)

[node name="ItemSprite" type="Sprite2D" parent="Slot_background/background"]
position = Vector2(80, 80)
scale = Vector2(0.79, 0.79)
texture = ExtResource("1_hiccc")

[node name="ItemQuantity" type="Label" parent="Slot_background/background"]
layout_mode = 0
offset_left = 5.0
offset_top = 106.0
offset_right = 155.0
offset_bottom = 157.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "1"

[node name="ItemDetails" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_top = -100.0
offset_right = 300.0

[node name="ColorRect" type="ColorRect" parent="ItemDetails"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0335694, 0.0982561, 0.124688, 1)

[node name="Name" type="Label" parent="ItemDetails"]
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 294.0
offset_bottom = 42.0
text = "Name"
autowrap_mode = 2
text_overrun_behavior = 2

[node name="Type" type="Label" parent="ItemDetails"]
layout_mode = 0
offset_left = 4.0
offset_top = 42.0
offset_right = 294.0
offset_bottom = 81.0
text = "Type
"
autowrap_mode = 2
text_overrun_behavior = 2

[node name="ItemUsage" type="Panel" parent="."]
visible = false
offset_top = -100.0
offset_right = 300.0

[node name="UseButton" type="Button" parent="ItemUsage"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Use"

[node name="DropButton" type="Button" parent="ItemUsage"]
custom_minimum_size = Vector2(250, 30)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Drop"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_g02pa")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
